--- a/view/_partial/header.html
+++ b/view/_partial/header.html
@@ -3,7 +3,7 @@
   <div class="box">
     <div class="slidebox"></div>
     <div class="contentbox"><span class="afa-logo w-p-absolute"><a href="../index.html"><img src="../img/logo.png" alt=""/></a></span><span class="img-nav-tab"><a href="#" class="nav-item">徒步</a><a href="#" class="nav-item">骑行</a><a href="#" class="nav-item">钓鱼</a><a href="#" class="nav-item">自驾</a><a href="#" class="nav-item">攀岩</a><a href="#" class="nav-item">滑雪</a><a href="#" class="nav-item">更多</a></span>
-      <div class="center-operate"><a href="login.html">登录 &nbsp;|&nbsp;</a><a href="register.html">注册 &nbsp;|&nbsp;</a><a href="mycenter.html" class="afa-center">个人中心</a></div>
+      <div class="center-operate"><a href="login.html">登录 </a>&nbsp;|&nbsp;<a href="register.html">注册 </a>&nbsp;|&nbsp;<a href="mycenter.html" class="afa-center">个人中心</a></div>
     </div>
     <div class="slidebox"></div>
   </div>
