--- a/view/find_line.html
+++ b/view/find_line.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>阿尔法旅游网站</title>
   <link rel="shortcut icon" type="image/x-icon" href="../img/favicon.ico" media="screen">
+  <link rel="stylesheet" type="text/css" href="../css/lib/jquery-ui.min.css">
   <link rel="stylesheet" type="text/css" href="../css/global.css">
   <link rel="stylesheet" type="text/css" href="../css/pro.min.css">
   <link rel="stylesheet" type="text/css" href="../css/lib/jquery-ui.min.css">
@@ -19,7 +20,7 @@
       <div class="box">
         <div class="slidebox"></div>
         <div class="contentbox"><span class="afa-logo w-p-absolute"><a href="../index.html"><img src="../img/logo.png" alt=""></a></span><span class="img-nav-tab"><a href="#" class="nav-item">徒步</a><a href="#" class="nav-item">骑行</a><a href="#" class="nav-item">钓鱼</a><a href="#" class="nav-item">自驾</a><a href="#" class="nav-item">攀岩</a><a href="#" class="nav-item">滑雪</a><a href="#" class="nav-item">更多</a></span>
-          <div class="center-operate"><a href="login.html">登录 &nbsp;|&nbsp;</a><a href="register.html">注册 &nbsp;|&nbsp;</a><a href="mycenter.html" class="afa-center">个人中心</a></div>
+          <div class="center-operate"><a href="login.html">登录 </a>&nbsp;|&nbsp;<a href="register.html">注册 </a>&nbsp;|&nbsp;<a href="mycenter.html" class="afa-center">个人中心</a></div>
         </div>
         <div class="slidebox"></div>
       </div>
@@ -40,7 +41,7 @@
       <div class="contentbox">
         <div class="afa-m-fe">
           <h2 class="afa-module-title afa-bg-m-title"><span class="t-chinese">找路线</span><span class="t-english">FIND-LINE</span></h2>
-          <div class="afa-m-fe-content">
+          <div class="afa-m-fe-content bg-gray">
                         <div id="find_line_roll_1" class="afa-m-roll">
                           <ul class="roll-list">
                             <li class="roll-item"><a href="#"><img src="../img/default_roll.jpg" alt=""></a></li>
@@ -128,7 +129,7 @@
         <div class="blue-tooltip w-tc">这里没有你想去的路线吗？<a href="#">点击这里</a></div>
         <div class="afa-m-fe">
           <h2 class="afa-module-title afa-bg-m-title"><span class="t-chinese">定制吧</span><span class="t-english">COSTOM-MAKE</span></h2>
-          <div class="afa-m-fe-content">
+          <div class="afa-m-fe-content bg-gray">
             <div class="afa-custom-make">
               <div class="a-c-m-content-wrapper">
                 <form id="custom_make" method="" action="">
@@ -352,8 +353,8 @@
             </div>
           </div>
         </div>
-        <div class="afa-m-fe bg-white">
-          <div class="line-recommend">
+        <div class="afa-m-fe">
+          <div class="line-recommend bg-gray">
             <div class="w-padding-wrapper">
               <h3 class="lr-t-title">推荐行程</h3>
               <div class="w-grid-a line-intr">
