--- a/view/_partial/head.html
+++ b/view/_partial/head.html
@@ -4,5 +4,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>阿尔法旅游网站</title>
 <link rel="shortcut icon" type="image/x-icon" href="../img/favicon.ico" media="screen"/>
+<link rel="stylesheet" type="text/css" href="../css/lib/jquery-ui.min.css"/>
 <link rel="stylesheet" type="text/css" href="../css/global.css"/>
 <link rel="stylesheet" type="text/css" href="../css/pro.min.css"/>
